silencing the compilation command

--- a/5PageAllocator/Makefile
+++ b/5PageAllocator/Makefile
@@ -8,7 +8,7 @@ memory:	main
 	@valgrind ./exe/main
 
 main:	main.c
-	gcc -Wall -g -o exe/main main.c
+	@gcc -Wall -g -o exe/main main.c
 
 clean:
 	rm -f exe/main
