--- a/7ThreadPools/Makefile
+++ b/7ThreadPools/Makefile
@@ -1,3 +1,5 @@
+# If you're wondering about the include file, -I shows the GNU compiler where to look for .h files
+# That way, you don't have to type the whole directory when you include a .h file
 all:	exe/main
 
 exe/main:	src/*.c
