additional formatting and adding correct inputs

--- a/7ThreadPools/src/Makefile
+++ b/7ThreadPools/src/Makefile
@@ -1,15 +1,15 @@
 # If you're wondering about the include file, -I shows the GNU compiler where to look for .h files
 # That way, you don't have to type the whole directory when you include a .h file
-all:	exe/main
+all:	../exe/main
 
-exe/main:	src/*.c
-	@gcc -g -Wall -o exe/main -I ./include src/*.c
+../exe/main:	*.c
+	@gcc -g -Wall -o ../exe/main -I ../include *.c -lpthread
 
-run:	exe/main
-	@./exe/main
+run:	../exe/main
+	@./../exe/main
 
-memory:	exe/main
-	@valgrind ./exe/main
+memory:	../exe/main
+	@valgrind ./../exe/main
 
 clean:
-	rm -f exe/main
+	rm -f ../exe/main
